--- a/k8s-loadbalancer.conf
+++ b/k8s-loadbalancer.conf
@@ -6,5 +6,15 @@
 # 第五个字段: k8s service 需要代理的端口的协议，如果不写默认就是 tcp
 # 支持的协议: tcp, udp, http, https
 
-53:     kube-dns.kube-system:53
-53:     kube-dns.kube-system:53:udp
+#53:     kube-dns.kube-system:53
+#53:     kube-dns.kube-system:53:udp
+80:     iot-k01-kong-proxy.yeiot:80:http
+443:    iot-k01-kong-proxy.yeiot:443:tcp
+8080:   iot-s01-http-adp.yeiot:8080:tcp
+8443:   iot-s02-https-adp.yeiot:8443:tcp
+5883:   iot-s03-coap-adp.yeiot:5883:udp
+5884:   iot-s05-coap-dtls-adp.yeiot:5884:udp
+1883:   iot-s04-mqtt-adp.yeiot:1883:tcp
+8883:   iot-s06-mqtts-adp.yeiot:8883:tcp
+5684:   iot-s07-lwm2m-adp.yeiot:5684:udp
+10883:   iot-s10-ffgw-adp.yeiot:10883:tcp
